--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="details_cta_vert_padding">8dp</dimen>
     <dimen name="player_icon_size">48dp</dimen>
     <dimen name="player_secondary_icon_size">32dp</dimen>
+    <dimen name="settings_item_height">48dp</dimen>
+    <dimen name="settings_item_height_two">56dp</dimen>
 </resources>
