--- a/app/src/main/res/layout/fragment_downloads.xml
+++ b/app/src/main/res/layout/fragment_downloads.xml
@@ -8,10 +8,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:gravity="center"
-        android:background="@color/color_secondary">
-
+        android:layout_height="48dp"
+        android:background="@color/color_secondary"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/imageView6"
@@ -21,19 +20,19 @@
             app:tint="@color/default_text_color" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tv_downloads_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:textSize="16sp"
             android:fontFamily="@font/sf_ui_text_medium"
-            android:text="Consuming 4.20 GB on Device" />
+            android:text="Consuming 4.20 GB on Device"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/downloads_recycler"
-        android:layout_marginTop="56dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp" />
 
 </FrameLayout>
